@@ -8,6 +8,7 @@
 - fixed [ oval-Bugs-2879918 ] Difference in keys between Annotations and Properties file
 - added missing violation message for @AssertValid (thanks to Eric Lewis)
 - fixed [ oval-Bugs-2890683 ] Where is 'net.sf.oval.constraint.AssertURL.violated'
++ JPAAnnotationsConfigurer now also interprets annotated getter methods
 
 2009-09-27 v1.40
 ================
